使用spi接口lora模块

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,12 @@
 [env:uno]
 ;[env:megaADK]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 ;board = uno
 framework = arduino
 
+upload_port=/dev/cu.usbserial-A92HHJB3
+monitor_port = /dev/cu.usbserial-A92HHJB3
+;upload_speed = 115200
+; Custom Serial Monitor speed (baud rate)
+monitor_speed = 115200
