解决指针溢出，delete之

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,12 +3,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = nano
 
-[env:uno]
+[env:nano]
 ;[env:megaADK]
 platform = atmelavr
 board = nanoatmega328
-;board = uno
 framework = arduino
 
 upload_port=/dev/cu.usbserial-A92HHJB3
@@ -16,3 +17,26 @@ monitor_port = /dev/cu.usbserial-A92HHJB3
 ;upload_speed = 115200
 ; Custom Serial Monitor speed (baud rate)
 monitor_speed = 115200
+
+
+
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+upload_speed = 921600
+; Custom Serial Monitor speed (baud rate)
+monitor_speed = 119200
+board_build.flash_mode = qio
+# or using GIT Url (the latest development version)
+;lib_deps = https://github.com/me-no-dev/ESPAsyncWebServer.git
+; lib_deps=
+;     ESPLed
+;     Ticker
+# 指定烧录串口
+upload_protocol = esptool
+upload_port = /dev/cu.wchusbseria*
+; Custom Serial Monitor port
+monitor_port = /dev/cu.wchusbseria*
+
+
